--- a/infra/users/users.yml
+++ b/infra/users/users.yml
@@ -9,6 +9,13 @@ Parameters:
     MinLength: '2'
     MaxLength: '32'
 Resources:
+  Nathan:
+    Type: 'AWS::IAM::User'
+    Properties:
+      UserName: "nathan"
+      Groups:
+        - Fn::ImportValue:
+            !Sub "${BaselineExportName}-RestrictedAdminGroup"
   Justin:
     Type: 'AWS::IAM::User'
     Properties:
@@ -16,5 +23,54 @@ Resources:
       Groups:
         - Fn::ImportValue:
             !Sub "${BaselineExportName}-PrivilegedAdminGroup"
+        - Fn::ImportValue:
+            !Sub "${BaselineExportName}-RestrictedAdminGroup"
+  Evangeline:
+    Type: 'AWS::IAM::User'
+    Properties:
+      UserName: "evangeline"
+      Groups:
+        - Fn::ImportValue:
+            !Sub "${BaselineExportName}-RestrictedAdminGroup"
+  Sarah:
+    Type: 'AWS::IAM::User'
+    Properties:
+      UserName: "sarah"
+      Groups:
+        - Fn::ImportValue:
+            !Sub "${BaselineExportName}-RestrictedAdminGroup"
+  Yunsar:
+    Type: 'AWS::IAM::User'
+    Properties:
+      UserName: "yunsar"
+      Groups:
+        - Fn::ImportValue:
+            !Sub "${BaselineExportName}-RestrictedAdminGroup"
+  Keung:
+    Type: 'AWS::IAM::User'
+    Properties:
+      UserName: "keung"
+      Groups:
+        - Fn::ImportValue:
+            !Sub "${BaselineExportName}-RestrictedAdminGroup"
+  Elton:
+    Type: 'AWS::IAM::User'
+    Properties:
+      UserName: "elton"
+      Groups:
+        - Fn::ImportValue:
+            !Sub "${BaselineExportName}-RestrictedAdminGroup"
+  William:
+    Type: 'AWS::IAM::User'
+    Properties:
+      UserName: "william"
+      Groups:
+        - Fn::ImportValue:
+            !Sub "${BaselineExportName}-RestrictedAdminGroup"
+  Dallas:
+    Type: 'AWS::IAM::User'
+    Properties:
+      UserName: "dallas"
+      Groups:
         - Fn::ImportValue:
             !Sub "${BaselineExportName}-RestrictedAdminGroup"
