--- a/infra/sso/managed-policies.yml
+++ b/infra/sso/managed-policies.yml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: >-
-  The power user role in Sydney
+  Developer role in Sydney
 Resources:
   DeveloperManagedPolicy:
     Type: AWS::IAM::ManagedPolicy
@@ -10,17 +10,37 @@ Resources:
       PolicyDocument:
         Version: '2012-10-17'
         Statement:
-        - Effect: Allow
-          NotAction:
+        - Sid: DenyAdmin
+          Effect: Deny
+          Action:
           - iam:*
           - organizations:*
           - account:*
           Resource: "*"
-        - Sid: S3
+        - Sid: AllowS3
           Effect: Allow
           Action: s3:*
           Resource: "*"
-        - Sid: EC2
+        - Sid: AllowEC2
           Effect: Allow
           Action: ec2:*
           Resource: arn:aws:ec2:ap-southeast-2:*:*
+        - Sid: AllowCFN
+          Effect: Allow
+          Action: cloudformation:*
+          Resource: arn:aws:ec2:ap-southeast-2:*:*
+        - Sid: AllowCloudwatch
+          Effect: Allow
+          Action: cloudwatch:*
+          Resource: arn:aws:ec2:ap-southeast-2:*:*
+        - Sid: AllowLambda
+          Effect: Allow
+          Action: lambda:*
+          Resource: arn:aws:ec2:ap-southeast-2:*:*
+
+Outputs:
+  DeveloperRole:
+    Description: Developer role in Sydney
+    Value: !Ref DeveloperManagedPolicy
+    Export:
+      Name: DeveloperManagedPolicy
