--- a/infra/sso/managed-policies.yml
+++ b/infra/sso/managed-policies.yml
@@ -2,11 +2,11 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: >-
   Developer role in Sydney
 Resources:
-  DeveloperManagedPolicy:
+  DeveloperAccessManagedPolicy:
     Type: AWS::IAM::ManagedPolicy
     Properties:
       Description: A managed policy only for developers
-      ManagedPolicyName: DeveloperManagedPolicy
+      ManagedPolicyName: DeveloperAccess
       PolicyDocument:
         Version: '2012-10-17'
         Statement:
@@ -28,25 +28,64 @@ Resources:
           Effect: Allow
           Action: ec2:*
           Resource: "*"
+          Condition:
+            StringEquals:
+              aws:RequestedRegion: ap-southeast-2
+            StringEquals:
+              ec2:Region: ap-southeast-2
         - Sid: AllowCFN
           Effect: Allow
           Action: cloudformation:*
           Resource: "*"
+          Condition:
+            StringEquals:
+              aws:RequestedRegion: ap-southeast-2
         - Sid: AllowCloudwatch
           Effect: Allow
           Action: cloudwatch:*
           Resource: "*"
+          Condition:
+            StringEquals:
+              aws:RequestedRegion: ap-southeast-2
         - Sid: AllowLambda
           Effect: Allow
           Action: lambda:*
           Resource: "*"
+          Condition:
+            StringEquals:
+              aws:RequestedRegion: ap-southeast-2
         - Sid: AllowGuardDuty
           Effect: Allow
           Action: guardduty:*
           Resource: "*"
+          Condition:
+            StringEquals:
+              aws:RequestedRegion: ap-southeast-2
+  BillingViewAccessManagedPolicy:
+    Type: AWS::IAM::ManagedPolicy
+    Properties:
+      Description: View billing information
+      ManagedPolicyName: BillingViewAccess
+      PolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Sid: ViewBilling
+          Effect: Allow
+          Action:
+          - aws-portal:ViewPaymentMethods
+          - aws-portal:ViewAccount
+          - aws-portal:ViewBilling
+          - aws-portal:ViewUsage
+          Resource: "*"
+
 Outputs:
-  DeveloperRole:
-    Description: Developer role in Sydney
-    Value: !Ref DeveloperManagedPolicy
+  DeveloperAccessManagedPolicy:
+    Description: DeveloperAccessManagedPolicy
+    Value: !Ref DeveloperAccessManagedPolicy
     Export:
-      Name: DeveloperManagedPolicy
+      Name: DeveloperAccessManagedPolicy
+  BillingViewAccessManagedPolicy:
+    Description: BillingViewAccessManagedPolicy
+    Value: !Ref BillingViewAccessManagedPolicy
+    Export:
+      Name: BillingViewAccessManagedPolicy
