Moved drupal stack

--- a/.envrc-demo
+++ b/.envrc-demo
@@ -2,3 +2,5 @@
 # DO NOT COMMIT the .envrc file!
 export REPO_ROOT=$(git rev-parse --show-toplevel)
 export AWS_ENVIRONMENT="qa"
+export MY_IP=$(curl https://api.myip.com | jq -r .'ip')
+export EMAIL="your@email.com"
