--- a/infra/sso/sso-stack.yml
+++ b/infra/sso/sso-stack.yml
@@ -23,113 +23,141 @@ Parameters:
 
 Resources:
   # For Developers
-  DeveloperAccessManagedPolicy:
-    Type: AWS::IAM::ManagedPolicy
-    Properties:
-      Description: A managed policy only for developers
-      ManagedPolicyName: DeveloperAccess
-      PolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-        - Sid: DenyAdmin
-          Effect: Deny
-          Action:
-          - organizations:*
-          - account:*
-          Resource: "*"
-        - Sid: AllowS3
-          Effect: Allow
-          Action: s3:*
-          Resource: "*"
-        - Sid: AllowIam
-          Effect: Allow
-          Action: iam:*
-          Resource: "*"
-        - Sid: AllowEC2
-          Effect: Allow
-          Action: ec2:*
-          Resource: "*"
-          Condition:
-            StringEquals:
-              aws:RequestedRegion: ap-southeast-2
-            StringEquals:
-              ec2:Region: ap-southeast-2
-        - Sid: AllowCFN
-          Effect: Allow
-          Action: cloudformation:*
-          Resource: "*"
-          Condition:
-            StringEquals:
-              aws:RequestedRegion: ap-southeast-2
-        - Sid: AllowCloudwatch
-          Effect: Allow
-          Action: cloudwatch:*
-          Resource: "*"
-          Condition:
-            StringEquals:
-              aws:RequestedRegion: ap-southeast-2
-        - Sid: AllowLambda
-          Effect: Allow
-          Action: lambda:*
-          Resource: "*"
-          Condition:
-            StringEquals:
-              aws:RequestedRegion: ap-southeast-2
-        - Sid: AllowGuardDuty
-          Effect: Allow
-          Action: guardduty:*
-          Resource: "*"
-          Condition:
-            StringEquals:
-              aws:RequestedRegion: ap-southeast-2
-        - Sid: AllowRds
-          Effect: Allow
-          Action: rds:*
-          Resource: "*"
-          Condition:
-            StringEquals:
-              aws:RequestedRegion: ap-southeast-2
-        - Sid: AllowElasticache
-          Effect: Allow
-          Action: elasticache:*
-          Resource: "*"
-          Condition:
-            StringEquals:
-              aws:RequestedRegion: ap-southeast-2
   DeveloperAccessPermissionSet:
     Type: AWS::SSO::PermissionSet
     Properties:
       Name: DeveloperAccess
       Description: DeveloperAccess
       InstanceArn: !Ref SSOInstanceArn
-      ManagedPolicies:
-        - !Ref DeveloperAccessManagedPolicy
+      InlinePolicy: |
+        {
+          "Version": "2012-10-17",
+          "Statement": [
+            {
+              "Sid": "DenyAdmin",
+              "Effect": "Deny",
+              "Action": [
+                "organizations:*",
+                "account:*"
+              ],
+              "Resource": "*"
+            },
+            {
+              "Sid": "AllowS3",
+              "Effect": "Allow",
+              "Action": "s3:*",
+              "Resource": "*"
+            },
+            {
+              "Sid": "AllowIam",
+              "Effect": "Allow",
+              "Action": "iam:*",
+              "Resource": "*"
+            },
+            {
+              "Sid": "AllowEC2",
+              "Effect": "Allow",
+              "Action": "ec2:*",
+              "Resource": "*",
+              "Condition": {
+                "StringEquals": {
+                  "ec2:Region": "ap-southeast-2"
+                }
+              }
+            },
+            {
+              "Sid": "AllowCFN",
+              "Effect": "Allow",
+              "Action": "cloudformation:*",
+              "Resource": "*",
+              "Condition": {
+                "StringEquals": {
+                  "aws:RequestedRegion": "ap-southeast-2"
+                }
+              }
+            },
+            {
+              "Sid": "AllowCloudwatch",
+              "Effect": "Allow",
+              "Action": "cloudwatch:*",
+              "Resource": "*",
+              "Condition": {
+                "StringEquals": {
+                  "aws:RequestedRegion": "ap-southeast-2"
+                }
+              }
+            },
+            {
+              "Sid": "AllowLambda",
+              "Effect": "Allow",
+              "Action": "lambda:*",
+              "Resource": "*",
+              "Condition": {
+                "StringEquals": {
+                  "aws:RequestedRegion": "ap-southeast-2"
+                }
+              }
+            },
+            {
+              "Sid": "AllowGuardDuty",
+              "Effect": "Allow",
+              "Action": "guardduty:*",
+              "Resource": "*",
+              "Condition": {
+                "StringEquals": {
+                  "aws:RequestedRegion": "ap-southeast-2"
+                }
+              }
+            },
+            {
+              "Sid": "AllowRds",
+              "Effect": "Allow",
+              "Action": "rds:*",
+              "Resource": "*",
+              "Condition": {
+                "StringEquals": {
+                  "aws:RequestedRegion": "ap-southeast-2"
+                }
+              }
+            },
+            {
+              "Sid": "AllowElasticache",
+              "Effect": "Allow",
+              "Action": "elasticache:*",
+              "Resource": "*",
+              "Condition": {
+                "StringEquals": {
+                  "aws:RequestedRegion": "ap-southeast-2"
+                }
+              }
+            }
+          ]
+        }
 
   # Read-only for Billing
-  BillingViewAccessManagedPolicy:
-    Type: AWS::IAM::ManagedPolicy
-    Properties:
-      Description: View billing information
-      ManagedPolicyName: BillingViewAccess
-      PolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-        - Sid: ViewBilling
-          Effect: Allow
-          Action:
-          - aws-portal:ViewPaymentMethods
-          - aws-portal:ViewAccount
-          - aws-portal:ViewBilling
-          - aws-portal:ViewUsage
-          Resource: "*"
   BillingAccessPermissionSet:
     Type: AWS::SSO::PermissionSet
     Properties:
       Name: BillingViewAccess
       Description: BillingViweAccess
       InstanceArn: !Ref SSOInstanceArn
-      ManagedPolicies:
-        - !Ref BillingViewAccessManagedPolicy
+      InlinePolicy: |
+        {
+          "Version": "2012-10-17",
+          "Statement": [
+            {
+              "Sid": "ViewBilling",
+              "Effect": "Allow",
+              "Action": [
+                "aws-portal:ViewPaymentMethods",
+                "aws-portal:ViewAccount",
+                "aws-portal:ViewBilling",
+                "aws-portal:ViewUsage"
+              ],
+              "Resource": "*"
+            }
+          ]
+        }
 
   # For Admins
   AdministratorAccessPermissionSet:
