--- a/.envrc-demo
+++ b/.envrc-demo
@@ -4,3 +4,11 @@ export REPO_ROOT=$(git rev-parse --show-toplevel)
 export AWS_ENVIRONMENT="qa"
 export MY_IP=$(curl https://api.myip.com | jq -r .'ip')
 export DEVELOPER_EMAIL="your@email.com"
+
+# AWS Accounts
+export QA_ACCOUNT_ID=""
+export PROD_ACCOUNT_ID=""
+export MASTER_ACCOUNT_ID=""
+export SSO_ADMINISTRATORS_GROUP_ID=""
+export SSO_DEVELOPERS_GROUP_ID=""
+export SSO_INSTANCE_ARN=""
