--- a/mythical-mysfits/cfn/static-site.yml
+++ b/mythical-mysfits/cfn/static-site.yml
@@ -20,4 +20,6 @@ Resources:
           Principal: "*"
           Action: s3:GetObject
           Resource: !Sub 'arn:aws:s3:::${BucketName}/*'
-  
+      Tags:
+        - Key: Component
+          Value: MythicalMysfits
