--- a/mythical-mysfits/cfn/ecs.yml
+++ b/mythical-mysfits/cfn/ecs.yml
@@ -55,6 +55,7 @@ Resources:
   # aws elbv2 create-target-group --name MythicalMysfits-TargetGroup --port 8080 --protocol TCP --target-type ip --vpc-id REPLACE_ME_VPC_ID --health-check-interval-seconds 10 --health-check-path / --health-check-protocol HTTP --healthy-threshold-count 3 --unhealthy-threshold-count 3 > ~/environment/target-group-output.json
   NLBTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    DependsOn: NLB
     Properties:
       Name: MythicalMysfits-TargetGroup
       Port: 8080
@@ -81,6 +82,8 @@ Resources:
   # aws ecs create-service --cli-input-json file://~/environment/aws-modern-application-workshop/module-2/aws-cli/service-definition.json
   FargateService:
     Type: AWS::ECS::Service
+    DependsOn:
+      - Listener
     Properties:
       ServiceName: MythicalMysfits-Service
       Cluster: !Ref ECSCluster
@@ -97,7 +100,8 @@ Resources:
           Subnets:
           - !ImportValue MythicalMysfitsCoreStack:PublicSubnetOne
           - !ImportValue MythicalMysfitsCoreStack:PublicSubnetTwo
-      TaskDefinition: mythicalmysfitsservice
+      # https://stackoverflow.com/questions/32727520/cloudformation-template-for-creating-ecs-service-stuck-in-create-in-progress
+      TaskDefinition: !Sub "arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:task-definition/mythicalmysfitsservice:123"
       LoadBalancers:
       - ContainerName: MythicalMysfits-Service
         ContainerPort: 8080
