Damn fargaatteee,, id rather k8s

--- a/mythical-mysfits/cfn/ecs.yml
+++ b/mythical-mysfits/cfn/ecs.yml
@@ -89,4 +89,10 @@ Outputs:
     Value: !Ref NLBTargetGroup
     Export:
       Name: !Join [ ':', [ !Ref 'AWS::StackName', 'NLBTargetGroup' ] ]
+  NLBDNSName:
+    Description: NLB DNS Name
+    Value: !GetAtt NLB.DNSName
+    Export:
+      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'NLBDNSName' ] ]
+
 
